syntax = "proto3";
package anytype;
option java_package = "io.anytype.pb";
option go_package = "pb";

import "google/protobuf/timestamp.proto";

enum DocumentBlockType {
    TYPE_NOT_SET = 0;
    H_GRID = 1;
    V_GRID = 2;
    EDITABLE = 3;
    DIV = 4;
    VIDEO = 5;
    IMAGE = 6;
    PAGE = 7;
    NEW_PAGE = 8;
    BOOKMARK = 9;
    FILE = 10;
    DATA_VIEW = 11;
}

enum DocumentBlockContentType {
    CONTENT_TYPE_NOT_SET = 0;
    P = 1;
    CODE = 2;
    H1 = 3;
    H2 = 4;
    H3 = 5;
    OL = 6;
    UL = 7;
    QUOTE = 8;
    TOGGLE = 9;
    CHECK = 10;
    H4 = 11;
}


message AddDocumentConfig {
    string name = 1;
    string icon = 2;
    string type = 3;
    string sharing = 4;
    repeated string members = 5;
    repeated string children = 6;

    string parentToAddChild = 7; // empty for the root
    string positionAfter = 8; // block to position. Empty for the last
    Position position = 9;
}

message DocumentBlock {
    string id = 1;
    DocumentBlockType type = 2;
    DocumentBlockContentType contentType = 3;
    repeated DocumentBlock children = 4;
    string content = 5;
    string width = 6;
}

message DocumentVersion {
    string id = 1;
    repeated string parents = 2;
    string name = 3;
    string icon = 4;
    repeated DocumentBlock blocks = 5;
    google.protobuf.Timestamp date = 6;
    string user = 7;
}

message DocumentBlockList {
    repeated DocumentBlock items = 1;
}

message DocumentVersionList {
    repeated DocumentVersion items = 1;
}

message DocumentList {
    repeated Document items = 1;
}

message Document {
    string id                 = 1;
    string name               = 2;
    string initiator          = 3;
    Type type          = 4;
    string icon = 5;
    bool archived = 6;
    repeated Document children = 7;

    // Type controls read (R), annotate (A), and write (W) access
    enum Type {
        PRIVATE   = 0; // initiator: RAW, whitelist:
        READ_ONLY = 1; // initiator: RAW, whitelist: R
        PUBLIC    = 2; // initiator: RAW, whitelist: RA
        OPEN      = 3; // initiator: RAW, whitelist: RAW
    }
}


enum Position {
    UNDER = 0;
    RIGHT = 1;
    ABOVE = 2;
    LEFT = 3;
}

message DocumentAddBlock {
    string target = 1; // parent block. Empty for root
    string positionAfter = 2; // block to position. Empty for the last
    Position position = 3;

    string contentType = 4;
    string content = 5;
    string width = 6;
}

message DocumentModifyBlock {
    string target = 1; // block to modify
    string contentType = 4;
    string content = 5;
    string width = 6;
}

message DocumentMoveBlock {
    string target = 1; // block to move
    string positionAfter = 2; // block to position. Empty for the last
    Position position = 3;
}
